--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Amateure photographer and automotive enthusiast.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Tucson, AZ.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Doing photoshoots, vibing with frineds, drives up and down Mt.Lemmon.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Engineer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Tucson, AZ</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>hoping this will gain experience within the industry and get closer to becoming a software engineer.</p>
     </section>
 
     <footer id="footer">
